# docs/swagger.json
@@ -11,6 +11,45 @@
     "host": "127.0.0.1:8000",
     "basePath": "/service",
     "paths": {
+        "/api/v1/user": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Создание пользователыя",
+                "parameters": [
+                    {
+                        "description": "Создание пользователыя",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/schema.UserCreate"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/schema.Response-model_User"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/schema.Response-schema_Empty"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/user/all": {
             "get": {
                 "consumes": [
@@ -27,7 +66,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/schema.Response-model_User"
+                            "$ref": "#/definitions/schema.Response-array_model_User"
                         }
                     },
                     "400": {
@@ -55,6 +94,23 @@
         "schema.Empty": {
             "type": "object"
         },
+        "schema.Response-array_model_User": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "result": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.User"
+                    }
+                },
+                "status": {
+                    "type": "boolean"
+                }
+            }
+        },
         "schema.Response-model_User": {
             "type": "object",
             "properties": {
@@ -80,6 +136,14 @@
                 },
                 "status": {
                     "type": "boolean"
+                }
+            }
+        },
+        "schema.UserCreate": {
+            "type": "object",
+            "properties": {
+                "full_name": {
+                    "type": "string"
                 }
             }
         }
