# internal/model/user.go
@@ -1,6 +1,6 @@
 package model
 
 type User struct {
-	UserID   uint   `json:"user_id" gorm:"user_id"`
-	FullName string `json:"full_name" gorm:"full_name"`
+	UserID   uint   `gorm:"primaryKey;user_id" json:"user_id"`
+	FullName string `gorm:"full_name" json:"full_name"`
 }
