# internal/schema/user.go
@@ -1,0 +1,5 @@
+package schema
+
+type UserCreate struct {
+	FullName string `json:"full_name"`
+}
